--- a/motion-effects/Cargo.toml
+++ b/motion-effects/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2018"
 
 [dependencies]
 obs-rs = { path = "../obs-rs", version = "0.1.0" }
+
+[lib]
+name = "motioneffects"
+crate-type = ["cdylib"]
