--- a/obs-properties-derive/Cargo.toml
+++ b/obs-properties-derive/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
-name = "obs-focus-window"
+name = "obs-properties-derive"
 version = "0.1.0"
 authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
+[lib]
+proc-macro = true
 
-members = [
-  "obs-rs",
-  "obs-sys",
-  "obs-properties-derive",
-  "motion-effects"
-]
+[dependencies]
+obs-sys = { path = "../obs-sys", version = "0.1.0" }
+syn = "1.0.16"
+quote = "1.0.2"
