--- a/scroll-focus-filter/Cargo.toml
+++ b/scroll-focus-filter/Cargo.toml
@@ -9,6 +9,7 @@ obs-rs = { path = "../obs-rs", version = "0.1.0" }
 crossbeam-channel = "0.4.2"
 xcb = "0.9.0"
 xcb-util = { version = "0.3.0", features = [ "ewmh", "icccm" ] }
+lazy_static = "1.4.0"
 
 [lib]
 name = "scrollfocus"
