--- a/obs-sys/Cargo.toml
+++ b/obs-sys/Cargo.toml
@@ -3,6 +3,8 @@ name = "obs-sys"
 version = "0.1.0"
 authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
 edition = "2018"
+description = "Bindgen of <obs/obs.h>"
+license = "GPL-2.0"
 
 [build-dependencies]
 bindgen = "0.53.1"
