--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "obs-wrapper"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
 edition = "2018"
 license = "GPL-2.0"
@@ -18,3 +18,4 @@ members = [
 [dependencies]
 obs-sys = { path = "./obs-sys", version = "0.1.2" }
 serde_json = "1.0.48"
+paste = "0.1.7"
