--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-os:
-  - linux
-  - osx
-  - windows
+# os:
+#   - linux
+#   - osx
+#   - windows
+
 language: rust
 rust:
   - stable
@@ -20,3 +21,5 @@ jobs:
   include:
     - os: linux
       dist: bionic
+    - os: osx
+    - os: windows
