--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           path: ${{ github.workspace }}/target
           key: ubuntu-rust-target-directory
-      - run: sudo apt-get install obs-studio libxcb-dev
+      - run: sudo apt-get install obs-studio libxcb
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
