--- a/obs-sys/Cargo.toml
+++ b/obs-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "obs-sys"
-version = "0.1.3"
+version = "0.2.0"
 authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
 edition = "2018"
 description = "Bindgen of <obs/obs.h>"
@@ -9,3 +9,7 @@ license = "GPL-2.0"
 [build-dependencies]
 bindgen = "0.53.1"
 
+[target.'cfg(windows)'.build-dependencies]
+cc = "1.0"
+regex = "1.0"
+winreg = "0.5"
