--- a/obs-sys/Cargo.toml
+++ b/obs-sys/Cargo.toml
@@ -3,6 +3,7 @@ name = "obs-sys"
 version = "0.2.0"
 authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
 edition = "2018"
+links = "obs"
 description = "Bindgen of <obs/obs.h>"
 license = "GPL-2.0"
 
