--- a/obs-sys/Cargo.toml
+++ b/obs-sys/Cargo.toml
@@ -14,3 +14,6 @@ bindgen = "0.53.1"
 cc = "1.0"
 regex = "1.0"
 winreg = "0.5"
+
+[target.'cfg(target_os = "macos")'.build-dependencies]
+shellexpand = "2.0"
