--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ obs-sys = { path = "./obs-sys", version = "0.2.0" }
 serde_json = "1.0.48"
 paste = "0.1.7"
 log = "0.4.11"
+
+[dependencies.num]
+version = "0.3"
+default-features = false
