--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,5 @@ members = [
 obs-sys = { path = "./obs-sys", version = "0.2.0" }
 serde_json = "1.0.48"
 paste = "0.1.7"
-log = "0.4.11"
+log = {version = "0.4.11", features = ["std"]}
 num-traits = "0.2.14"
