--- a/plugins/rnnoise-denoiser-filter/Cargo.toml
+++ b/plugins/rnnoise-denoiser-filter/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
 edition = "2018"
 
 [dependencies]
-obs-wrapper = { path = "../..", version = "0.3.0" }
+obs-wrapper = { path = "../..", version = "*" }
 nnnoiseless = { version = "0.2.1" }
 dasp = { version = "0.11.0", features = [ "interpolate", "signal", "ring_buffer", "interpolate-linear" ] }
 
