--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ env:
 
 jobs:
   cargo_fmt:
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v2
         with:
           submodules: true
@@ -29,6 +31,8 @@ jobs:
       - run: cargo fmt --all -- --check
 
   cargo_clippy:
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v2
         with:
           submodules: true
