--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,7 @@ jobs:
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
           sudo ./llvm.sh 16
+          sudo rm /usr/bin/clang -rf
           sudo ln -s /usr/bin/clang-16 /usr/bin/clang
 
       - run: cargo build --verbose --workspace
