--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,7 +81,9 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
 
-      - run: choco install obs-studio llvm
+      - run: choco install obs-studio
+
+      - run: choco install llvm --version=16.0.2
 
       - run: cargo build --verbose --workspace --exclude scroll-focus-filter
 
