--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,3 +105,4 @@ jobs:
           # Maybe you don't need to do this when running the plugin from OBS? I don't know.
           # If you own a Mac please do something better.
           DYLD_FALLBACK_FRAMEWORK_PATH: "/Applications/OBS.app/Contents/Frameworks"
+          DYLD_FALLBACK_LIBRARY_PATH: "/Applications/OBS.app/Contents/Frameworks"
