--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ obs-sys = { path = "./obs-sys", version = "0.3.0" }
 paste = "0.1.7"
 log = {version = "0.4.11", features = ["std"]}
 num-traits = "0.2.14"
+thiserror = "1.0.58"
